fixed the session bug and made changes to css, including with sizes, spacing and margins, also rubocop

--- a/app/assets/stylesheets/reservations/_new.css.scss
+++ b/app/assets/stylesheets/reservations/_new.css.scss
@@ -2,10 +2,10 @@
   color: $btn-warning-bg;
 }
 
-#empty_cart_btn {
-  margin-bottom: 0px;
+.edit_reservation_form {
+  max-width: 500px;
 }
 
 .form_errors {
-  font-size: 20px;
+  font-size: 18px;
 }
